# orbitalcoms

./: .coveragerc  .gitignore  LICENSE.txt  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
doc/: conf.py  index.rst
doc/api/: internal.rst  orbitalcoms.rst  user-facing.rst
mocks/: mock_ls.py
src/orbitalcoms/: __init__.py  __main__.py
src/orbitalcoms/_app/: headless.py  tkgui.py
src/orbitalcoms/_utils/: log.py
src/orbitalcoms/coms/: __init__.py
src/orbitalcoms/coms/drivers/: __init__.py  basedriver.py  driver.py  driverreadloop.py  localcomsdriver.py  serialcomsdriver.py  socketcomsdriver.py
src/orbitalcoms/coms/errors/: __init__.py  errors.py
src/orbitalcoms/coms/messages/: message.py
src/orbitalcoms/coms/strategies/: __init__.py  localcomsstrategy.py  localstrat.py  serialcomsstrategy.py  serialstrat.py  socketcomsstrategy.py  socketstrat.py  strategy.py
src/orbitalcoms/coms/subscribers/: __init__.py  subscription.py
src/orbitalcoms/stations/: __init__.py  groundstation.py  launchstation.py  station.py  stationcreators.py
tests/: test_coms_driver_read_loop.py  test_coms_driver_subscription.py  test_construct_message.py  test_ground_station.py  test_imports.py  test_launch_station.py  test_local_coms_driver.py  test_local_coms_strat.py  test_message.py  test_send_interval.py  test_serial_coms_driver.py  test_serial_coms_strat.py  test_socket_coms_driver.py  test_socket_coms_strat.py
tests/test_configs/cov/: coverage.cfg  full_coverage.cfg
