[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

# mypy configuration
[tool.mypy]
python_version = "3.11"
namespace_packages = true
files = [
  "src/orbitalcoms",
]
strict = true

[[tool.mypy.overrides]]
module = [
  "pynput",
  "pynput.keyboard",
  "serial",
]
ignore_missing_imports = true

[tool.isort]
profile = "black"
src_paths = [
  "src/orbitalcoms",
]

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
