[metadata]
name = orbitalcoms
version = 0.0.3
author = Matt Drozt
author_email = matthew.drozt@gmail.com
description = Purdue Orbital package to manage GS/LS Communication
long_description = TODO
url = https://github.com/purdue-orbital/orbitalcoms
platforms = unix, linux, osx, cygwin, win32
classifiers =
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10

[options]
package_dir =
  =src
packages = find:
install_requires =
  pyserial>=3.5

[options.extras_require]
dev = 
  black>=21.12b0
  isort>=5.10.1
  mypy>=0.910

[options.package_data]
orbitalcoms = py.typed

[options.packages.find]
where = src
exclude =
  .mypy_cache