[metadata]
name = orbitalcoms
version = 0.0.3
author = Matt Drozt
author_email = matthew.drozt@gmail.com
description = Purdue Orbital package to manage GS/LS Communication
long_description = TODO
url = https://github.com/purdue-orbital/orbitalcoms
platforms = unix, linux, osx, cygwin, win32
classifiers =
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10

[options]
package_dir =
  =src
packages = find:
python_requires = >=3.7
install_requires =
  pyserial>=3.5
  typing_extensions>=4.0.1
  attrs>=21.4.0

[options.entry_points]
console_scripts =
  orbitalcoms=orbitalcoms.__main__:main

[options.extras_require]
dev = 
  black>=21.12b0
  flake8>=4.0.1
  isort>=5.10.1
  mypy>=0.910
  pytest>=6.2.5
  pytest-cov>=3.0.0
  tox>=3.24.5

[options.package_data]
orbitalcoms = py.typed

[options.packages.find]
where = src
exclude =
  .mypy_cache

[flake8]
max-line-length = 160
